--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,4 +5,9 @@
 @import "header";
 @import "slider";
 @import "news";
+@import "event";
+@import "counter";
+@import "faq-gallery";
+@import "footer";
 @import "animation";
+@import "fonts";
