--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,10 +4,12 @@
 @import "global";
 @import "header";
 @import "slider";
-@import "news";
+@import "box-div";
+@import "news-a";
 @import "event";
 @import "counter";
-@import "faq-gallery";
+@import "faq";
+@import "gallery";
 @import "footer";
 @import "animation";
 @import "fonts";
