--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -7,3 +7,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Marck+Script&display=swap");
 
 @import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
+
+@font-face {
+  font-family: "Segoe";
+  src: url("/fonts/Segoe\ UI.woff");
+}
