--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -4,3 +4,112 @@
   align-items: center;
   background-color: blue;
 }
+
+//*******************
+
+// Header
+
+//*******************
+.header-container {
+  display: flex;
+  flex-direction: column;
+  height: 15vh;
+  width: 100%;
+
+  /* height: 80vh; */
+  .header {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    width: 60%;
+    margin-left: 10em;
+
+    /*  &__search {
+      svg {
+        width: 22px;
+        height: 30px;
+        fill: white;
+      }
+
+      padding-top: 24px;
+      padding-left: 24px;
+    } */
+
+    &__logo {
+      img {
+        width: 20em;
+        height: 20em;
+      }
+      /*  margin-right: 25em; */
+    }
+
+    .title {
+      color: white;
+      width: 34%;
+      height: 8rem;
+      word-spacing: 0.5rem;
+      margin-left: 5em;
+      margin-top: 20em;
+
+      .item-1,
+      .item-2,
+      .item-3 {
+        position: absolute;
+        display: block;
+        color: white;
+        width: 25em;
+        height: 10em;
+        z-index: 2;
+        font-size: 3rem;
+        animation-duration: 20s;
+        animation-timing-function: ease-in-out;
+        animation-iteration-count: infinite;
+      }
+
+      .item-1 {
+        animation-name: anim-1;
+      }
+
+      .item-2 {
+        animation-name: anim-2;
+      }
+
+      .item-3 {
+        animation-name: anim-3;
+      }
+    }
+
+    &__hammenu {
+      margin-right: 24px;
+      margin-top: 33px;
+      display: none;
+
+      > span {
+        display: block;
+        width: 26px;
+        height: 2px;
+        background-color: whitesmoke;
+        transition: all 300ms ease-in-out;
+        transform-origin: 3px 1px;
+
+        &:not(:last-child) {
+          margin-bottom: 5px;
+        }
+      }
+
+      &.open {
+        > span:first-child {
+          transform: rotate(45deg);
+        }
+
+        > span:nth-child(2) {
+          opacity: 0;
+        }
+
+        > span:last-child {
+          transform: rotate(-45deg);
+        }
+      }
+    }
+  }
+}
